--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_60","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"E:\\keyur-java\\1_Sept_JAVA_J2EE\\CoreJava_FullStack-WebStack\\Java8Features","type":"PROJECT","hints":{"PROJECT_NAME":"Java8Features"}},"ABSENT"]]
