--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_60","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"E:\\software\\apache-tomcat-8.5.24\\lib\\servlet-api.jar","type":"JAR","hints":{}},"ABSENT"],[{"location":"E:\\keyur-java\\1_Sept_JAVA_J2EE\\CoreJava_FullStack-WebStack\\BillingSystem\\WebContent\\WEB-INF\\lib\\billingsys-core.jar","type":"JAR","hints":{}},"ABSENT"]]
